--- a/header/About Us/AboutUs.css
+++ b/header/About Us/AboutUs.css
@@ -14,6 +14,7 @@
      --color-shadow: #DDDDDD;
 }
 
+
 html, body {
     margin: 0;
     padding: 0;
@@ -68,8 +69,9 @@ body {
 
 /* ===== NAVBAR ===== */
 .navbar {
-    width: 90%;
+    width: 92%;
     height: 90px;
+    max-width: 1100px;
 
     background: rgba(54, 48, 138, 0.2);
     backdrop-filter: blur(20px);
@@ -234,15 +236,15 @@ body {
 }
 
 .about-container {
-    margin: 0 auto 100px auto;   /* ⬅ center the whole block */
+    margin: 140px auto 100px;
     display: flex;
     gap: 50px;
     align-items: center;
-    justify-content: center;     /* ⬅ centers image + text together */
-    max-width: 1100px; 
-    color: var(--font-color);
-    font-size: 20px;
+    justify-content: center;
+    max-width: 1100px;
+    padding: 0 20px;
 }
+
 
 .about-img {
     width: 340px;
@@ -322,6 +324,15 @@ body {
   );
 }
 
+.dev-grid-2 {
+margin-bottom: 130px;
+  display: grid;
+  grid-template-columns: repeat(2, 400px); 
+  gap: 50px 60px;
+  justify-content: center;
+}
+
+
 /* TEXT CONTAINER */
 .id-details {
   margin-left: 55px;
@@ -361,7 +372,7 @@ body {
 /* SIGNATURE */
 .signature {
   font-family: "Qwitcher Grypen", cursive;
-  font-size: 2rem;             /* SMALLER SIGNATURE */
+  font-size: 29px !important;             
   margin-left: 6px;
 }
 
@@ -382,6 +393,7 @@ body {
 .text {
     font-weight: normal;
 }
+
 
 /* FOOTER */
 
@@ -450,3 +462,79 @@ body {
     font-family: "Jersey 15", sans-serif;   
 }
 
+/* Responsive Sizes*/
+
+@media (max-width: 1024px) {
+  .about-container {
+    gap: 30px;
+  }
+
+  .navbar {
+    gap: 40px;
+  }
+}
+
+
+/* =========================
+   MOBILE FIXES
+========================= */
+
+@media (max-width: 768px) {
+
+  .navbar {
+    flex-wrap: wrap;
+    height: auto;
+    padding: 20px;
+    gap: 20px;
+  }
+
+  .nav-links {
+    gap: 18px;
+    font-size: 18px;
+    flex-wrap: wrap;
+  }
+
+  .about-container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .about-img {
+    width: 220px;
+  }
+
+  .about-text h1 {
+    font-size: 34px;
+  }
+
+  .card-container {
+    margin-left: 0;
+    padding-left: 90px;
+  }
+
+  .photo {
+    left: 10px;
+    width: 70px;
+  }
+
+  .photo img {
+    height: 65px;
+  }
+
+  .id-details h3 {
+    font-size: 2rem;
+  }
+
+  .info {
+    font-size: 1rem;
+  }
+
+  .info span {
+    font-size: 16px;
+  }
+
+}
+
+* {
+  outline: 1px solid red;
+}
